--- a/diario.html
+++ b/diario.html
@@ -299,7 +299,7 @@
         });
 
         infoButton.addEventListener('click', () => {
-            profileContainer.style.display = profileContainer.style.display === 'none' || profileContainer.style.display === '' ? 'block' : 'none';
+            alert('Diário para você meu bem, escreva o que quiser, e salve para escrever mais tarde, se quiser. Escreva o que quiser:D');
         });
 
         themeToggle.addEventListener('change', () => {
@@ -348,4 +348,3 @@
     </script>
 </body>
 </html>
-
